# second-music-system

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md  SOUNDTRACKS.md  vcpkg.json
.github/actions/build-mac/: action.yml
.github/actions/build-windows/: action.yml
.github/actions/lipo-mac-arm64e+x86_64/: action.yml
.github/workflows/: release-mac.yml  release.yml
c-second-music-system/: Cargo.toml  README.md  build.sh  cargo-sources-for-flatpak.json  setup.sh
c-second-music-system/include/: second-music-system-commands.h  second-music-system.h
c-second-music-system/src/: boolean_response.rs  commander.rs  commands.rs  engine.rs  flow_control_response.rs  formatted_sound_stream.rs  lib.rs  mix_control_response.rs  sound_delegate.rs  soundtrack.rs  utilities.rs
second-music-system/: Cargo.toml
second-music-system/src/: data.rs  delegate.rs  din.rs  engine.rs  fader.rs  lib.rs  posfloat.rs  query.rs  reader.rs  runtime.rs  stream.rs
second-music-system/src/data/: parse.rs  test.rs
second-music-system/src/data/parse/: expression.rs  test.rs  timebase.rs
second-music-system/src/din/: macro_test.rs  macros.rs  test.rs
second-music-system/src/engine/: adapter.rs  interpreter.rs  mixer.rs  soundman.rs
second-music-system/src/engine/adapter/: chanadapter.rs  fadeadapter.rs  loopadapter.rs  rateadapter.rs  rateadapter_soxr.rs  rateadapter_terrible.rs
second-music-system/src/engine/adapter/chanadapter/: macros.rs
second-music-system/src/engine/soundman/: buffer.rs  stream.rs
second-music-system/src/runtime/: fg.rs  switchyard.rs  tokio.rs
