[package]
name = "c-second-music-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
second-music-system = {version = "=0.1.0", path = "../second-music-system", features=["ffi-expose-issuer"]}
libc = "0.2.151"
paste = "1.0.14"
function_name = "0.3.0"
compact_str = "0.7.1"

[lib]
crate-type = ["cdylib"]
