[package]
name = "c-second-music-system"
version = "0.1.0"
edition = "2021"
authors = ["Noah Obert <contact@noahobert.com>", "Solra Bizna <solra@bizna.name>"]
description = "C binding to the `second-music-system` crate"
readme = "README.md"
repository = "https://github.com/SolraBizna/second-music-system"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "middleware", "music"]
categories = ["game-development", "multimedia::audio"]

[dependencies]
second-music-system = {version = "=0.1.0", path = "../second-music-system", features=["ffi-expose-issuer"]}
libc = "0.2.151"
paste = "1.0.14"
function_name = "0.3.0"
compact_str = "0.7.1"

[lib]
crate-type = ["cdylib"]
