[package]
name = "second-music-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcow = "1.1"
crossbeam = "0.8"
derivative = "2.2"
libsoxr = "0.2.9"
num_cpus = "1.0"
once_cell = "1.17"
parking_lot = "0.12.1"
shellish_parse = "2.2"
tokio = {version = "1.28.2", features = ["full"]} # TODO: pare down features

[features]
default = []
# Do not use the debug-* features unless you're debugging SMS. Just having them
# turned on tanks performance, even if you don't use the hooks they provide.
debug-channels = []
debug-flows = []