[package]
name = "second-music-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arcow = "1.1"
crossbeam = "0.8"
derivative = "2.2"
libsoxr = "0.2.9"
num_cpus = {optional=true, version="1.0"}
once_cell = "1.17"
parking_lot = "0.12.1"
shellish_parse = "2.2"
switchyard = {optional=true, version="0.3.0"}
tokio = {optional=true, version = "1.28.2", features = ["rt"]}
vecmap-rs = "0.1.12"

[features]
default = ["switchyard"]
# Exposes an implementation of TaskRuntime for Switchyard, and the convenient
# Engine::new() function that uses Switchyard behind the scenes. Use this
# unless you KNOW you don't want it.
switchyard = ["dep:switchyard", "dep:num_cpus"]
# Exposes an implementation of TaskRuntime for Tokio. Use this if you have a
# Tokio runtime in your game already, and you want SMS to make use of it.
tokio = ["dep:tokio"]
# Do not use the debug-* features unless you're debugging SMS. Just having them
# turned on tanks performance, even if you don't use the hooks they provide.
debug-channels = []
debug-flows = []
# Exposes the EngineCommandIssuer trait. You should only use/need this if you
# are creating an FFI binding.
ffi-expose-issuer = []
